--- a/src/App.css
+++ b/src/App.css
@@ -1,11 +1,20 @@
 @import url('https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@200;300;400;500;600;700&display=swap');
 
-.land-content {
-  background-color: rgb(45, 51, 59);
-  color: rgb(238, 238, 238);
-}
-
 .land-layout {
   min-height: 100vh !important;
   font-family: 'Plus Jakarta Sans', sans-serif;
+}
+
+.ant-card {
+  border-radius: 5px !important;
+  overflow: hidden;
+  box-shadow: 0px 2px 3px 0px rgb(0, 0, 0, .5);
+}
+
+.flex {
+  display: flex !important;
+}
+
+.flex--j-centre {
+  justify-content: center !important;
 }
